# thoughtlink

./: .gitignore  ARCHITECTURE.md  README.md  README_HF.md  pyproject.toml  requirements.txt  requirements_hf.txt  setup_project.py
demo/: app.py  demo_video.py  full_demo.py  override_demo.py  run_all.py  run_demo.py  scalability_demo.py
results/: cnn_vs_rf.txt  demo_metrics.json  label_distribution.txt  latency_accuracy_tradeoff.txt  nirs_exploration.txt  pipeline_metrics.json  smoothing_comparison.txt  stage1_report.txt  stage2_report.txt  subject_ids.txt
src/: __init__.py  cnn_baseline.py  download.py  explore_nirs.py  features.py  integration.py  latency_accuracy_tradeoff.py  pipeline.py  preprocess.py  smoothing.py  stage1_binary.py  stage2_direction.py  temporal_embedding.py  visualize.py
