[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thoughtlink"
version = "0.1.0"
description = "Brain-to-Robot BCI for Hack Nation 2026"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=2.0",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "joblib>=1.3",
  "huggingface_hub>=0.20",
  "mne>=1.6",
  "mujoco>=3.4.0",
  "onnxruntime>=1.17",
  "mediapipe>=0.10.32",
  "opencv-python>=4.9",
]
